--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,7 +33,7 @@
         android:id="@+id/edtPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="비밀번호 입력"
+        android:hint="비밀번호 입력"
         android:inputType="textPassword"/>
 
     <Button
