--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -2,19 +2,16 @@
 <layout>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="20dp"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    android:padding="20dp"
+    android:layout_height="match_parent">
 
-    <TextView
+<TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="이메일"/>
 
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="아이디"/>
 
     <EditText
         android:id="@+id/edtEmail"
@@ -26,27 +23,33 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="비밀번호"
-        android:layout_marginTop="10dp"/>
+        android:text="비밀번호"/>
+
 
     <EditText
         android:id="@+id/edtPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="비밀번호 입력"
+        android:hint="비밀번호 양식으로 입력"
         android:inputType="textPassword"/>
 
-    <Button
-        android:id="@+id/btnLogin"
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="닉네임"/>
+
+
+    <EditText
+        android:id="@+id/edtNickname"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="로그인"/>
-<Button
-    android:id="@+id/btnSignUp"
-    android:text="회원가입"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"/>
+        android:hint="자유 입력"
+        android:inputType="textEmailAddress"/>
+    <Button
+        android:id="@+id/btnOk"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="가입 하기"/>
 
 </LinearLayout>
-
 </layout>
